--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "jakemcnaughton/jakemcnaughton.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Jake McNaughton _ GS_Cropped.jpg"
   name             : "Jake McNaughton"
   pronouns         : "he/him"# example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
