--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "Jake McNaughton _ GS_Cropped.jpg"
   name             : "Jake McNaughton"
   pronouns         : "he/him"# example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "PSI Master's Student at Perimeter Institute"
   location         : "Waterloo, Canada"
   employer         : "Perimeter Institute"
   uri              : # URL
