--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   # Biographic information
   avatar           : "Jake McNaughton _ GS_Cropped.jpg"
   name             : "Jake McNaughton"
-  pronouns         : "he/him"# example: "she/her"  
-  bio              : "PSI Master's Student at Perimeter Institute"
+  #pronouns         : "he/him"# example: "she/her"  
+  bio              : "Master's Student at Perimeter Institute"
   location         : "Waterloo, Canada"
   employer         : "Perimeter Institute"
   uri              : # URL
